--- a/.openshift/action_hooks/config
+++ b/.openshift/action_hooks/config
@@ -3,10 +3,15 @@
 # copyright quodatum
 # author: andy bunce
 #
+set -a 
 
 BASEX_VERSION="http://files.basex.org/releases/7.9/BaseX79.zip"
+
+#account
 U=admin
 P=admin
+
+# ports, allowed values 15000->?
 p= 15005 # database server
 e= 15006 # event server
 s= 15007 # stop
