--- a/config
+++ b/config
@@ -7,8 +7,8 @@
 set -a 
 
 # path to zip distribution for required basex version
-BASEX_VERSION="http://files.basex.org/releases/7.9/BaseX79.zip"
-#BASEX_VERSION=https://github.com/Quodatum/openshift-basex-quick-start/releases/download/v0.3-alpha/BaseX80-20141223.192016.zip
+#BASEX_VERSION="http://files.basex.org/releases/7.9/BaseX79.zip"
+BASEX_VERSION=https://github.com/Quodatum/openshift-basex-quick-start/releases/download/v0.3-alpha/BaseX80-20150106.134426.zip
 
 #account
 BASEX_USER="admin"
