[fix] remove event

--- a/config
+++ b/config
@@ -15,7 +15,7 @@ BASEX_PASSWORD="admin"
 
 # ports, allowed values 15000 - 16000
 PORT_DATABASE="15005" 
-PORT_EVENT="15006" 
+# PORT_EVENT="15006" obsolete
 PORT_STOP="15007"
 
 # graphiz install
