--- a/config
+++ b/config
@@ -7,7 +7,7 @@
 set -a 
 
 # path to zip distribution for required basex version
-BASEX_VERSION="http://files.basex.org/releases/latest/BaseX84-20160107.190325.zip"
+BASEX_VERSION="http://files.basex.org/releases/8.4.1/BaseX841.zip"
 
 #account
 BASEX_USER="admin"
@@ -22,6 +22,5 @@ PORT_STOP="15007"
 JAVA_HOME="/etc/alternatives/java_sdk_1.8.0"
 PATH=$JAVA_HOME/bin:$PATH
 
-# graphiz install (unused)
-GRAPHVIZ=1
+
  
